--- a/Jenkinsfiles/Jenkinsfile
+++ b/Jenkinsfiles/Jenkinsfile
@@ -6,7 +6,16 @@ pipeline {
     stages {
         stage('test'){
             steps {
-                bat 'python setup.py'
+                def branches = [:]
+                for (int i = 0; i < 4; i++){
+                    def index = i
+                    branches["test${i}"] = {
+                        build   propagate: false,
+                                job: 'test',
+                                parameters: [string(name: 'dummy', value: "${index}")]
+                    }
+                }
+                parallel branches
             }
         }
     }
